@@ -1,3 +1,10 @@
+openmolar (0.4.02+bzr0829-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream changes
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 04 Jun 2013 18:01:24 +0100
+
+
 openmolar (0.4.01+bzr0828-0~__DIST__0) __DIST__; urgency=low
 
   * upstream changes
